force-app/main/default/objects/Lender_Detail__c/Lender_Detail__c.object-meta.xml
<CustomObject>
    <label>Lender Detail</label>
    <nameField>
        <displayFormat>LD-{000000}</displayFormat>
        <label>Lender No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lender Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>