force-app/main/default/objects/Lender_Detail__c/fields/Investor_Intermediary__c.field-meta.xml
<CustomField>
    <fullName>Investor_Intermediary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investor &amp; Intermediary</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an Investor &amp; Intermediary account</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Investors &amp; Intermediary</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lender Details (Investor &amp; Intermediary)</relationshipLabel>
    <relationshipName>Lender_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>