force-app/main/default/objects/Lender_Detail__c/fields/Lender_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lender_Contact__c</fullName>
    <label>Lender Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Lender Contact</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Lender Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lender Details</relationshipLabel>
    <relationshipName>Lender_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>